--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.1.8"
   },
   "devDependencies": {
